xserver-xorg-video-dummy (1:0.3.1-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Sun, 25 Jan 2009 23:43:27 +0100

xserver-xorg-video-dummy (1:0.3.0-2) experimental; urgency=low

  * Build against xserver 1.5.

 -- Julien Cristau <jcristau@debian.org>  Thu, 04 Sep 2008 19:29:32 +0200

xserver-xorg-video-dummy (1:0.3.0-1) unstable; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.7.3.
  * Drop the XS- prefix from Vcs-* control fields.
  * Switch to debhelper compat 5.
  * Add myself to Uploaders.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want
    dpkg-shlibdeps to shut up about symbols it can't find.  Build-depend on
    dpkg-dev >= 1.14.17.

 -- Julien Cristau <jcristau@debian.org>  Mon, 02 Jun 2008 21:55:35 +0200

xserver-xorg-video-dummy (1:0.2.0-7) unstable; urgency=low

  * Build against Xserver 1.4, closes: #442897.
  * Add the upstream URL to debian/copyright.
  * Add myself to Uploaders, and remove Branden with his permission.

 -- Brice Goglin <bgoglin@debian.org>  Mon, 17 Sep 2007 23:33:10 +0200

xserver-xorg-video-dummy (1:0.2.0-6) unstable; urgency=low

  [ Julien Cristau ]
  * Add link to xserver-xorg-core bug script, so that bugreports contain
    the user's config and log files.

  [ Timo Aaltonen ]
  * Replaces/Conflicts: xserver-xorg-driver-dummy.

  [ Brice Goglin ]
  * Install the upstream changelog.
  * Bump Build-Depends: xserver-xorg-dev to >= 2:1.2.99.902
    (needed to let xsfbs get access to serverminver).
  * Add XS-Vcs-*.
  * Add a link to www.X.org and a reference to the xf86-video-dummy
    module in the long description.
  * Remove Fabio from uploaders with his permission. He's always welcome back.

  [ David Nusinow ]
  * Upload to unstable

 -- David Nusinow <dnusinow@debian.org>  Sun, 16 Sep 2007 16:44:43 -0400
