@@ -13,7 +13,10 @@ Build-Depends:
  x11proto-fonts-dev,
  x11proto-randr-dev,
  x11proto-render-dev,
- dpkg-dev (>= 1.14.17)
+ dpkg-dev (>= 1.14.17),
+ automake,
+ libtool,
+ xutils-dev
 Standards-Version: 3.7.3
 Vcs-Git: git://git.debian.org/git/pkg-xorg/driver/xserver-xorg-video-dummy
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/driver/xserver-xorg-video-dummy.git
